# webkit-android-libraries

./: CMakeLists.txt  VERSIONS
android/prebuilts/ndk/: CMakeLists.txt  ndk.def
android/prebuilts/ndk/current/sources/cxx-stl/gnu-libstdc++/: cxxabi.cpp
android/prebuilts/ndk/current/sources/cxx-stl/gnu-libstdc++/include/: cmath
android/system/core/libcutils/: CMakeLists.txt  ashmem-host.c
android/system/core/liblog/: logd_write_win32.cpp
cairo/: CMakeLists.txt
cairo/boilerplate/: cairo-boilerplate-egl.c
curl/: CMakeLists.txt
curl/lib/: CMakeLists.txt
fontconfig/: CMakeLists.txt
fontconfig/fontconfig/: fontconfig.h
fontconfig/src/: fcint.h
icu/source/i18n/: regexcmp.cpp
icu/source/stubdata/: CMakeLists.txt
libjpeg-turbo/: CMakeLists.txt  jconfig.h  jpeglib.h
libjpeg-turbo/simd/: CMakeLists.txt
pthreadnp/: CMakeLists.txt  pthread.cpp  pthread.h  semaphore.h
pthreadnp/pthreads-win32/: CMakeLists.txt  pthread.h  signal.c
safeint/safeint/: SafeInt3.hpp  safeint.cpp  safeint.h
winsock2/winsock2/sys/: cdefs.h
